--- a/presentation/dplyr_drug_talk.tex
+++ b/presentation/dplyr_drug_talk.tex
@@ -58,17 +58,20 @@
 
 \usepackage{alltt}
 
+% preamble%{{{
 \usepackage{verbatim}
 
 \author{Peter DeWitt\\peter.dewitt@ucdenver.edu}
 \date{1 July 2014}
 \title{Introduction to {\tt dplyr} and {\tt magrittr}}
 \subtitle{Denver R Users Group\\www.meetup.com/DenverRUG}
+
+
+%}}}
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
 
-
-
+% Title page, goals%{{{
 \begin{frame}[fragile]
   \maketitle
 \end{frame} 
@@ -84,11 +87,12 @@
       part of {\tt dplyr} and extended further in {\tt magrittr}.  
   \end{itemize}
 
-  % \tableofcontents
+  \tableofcontents
 
 \end{frame} 
+%}}}
 
-\section{{\tt dplyr}}
+\section{{\tt dplyr}}%{{{
 \begin{frame}[fragile]
   \frametitle{{\tt dplyr}: a grammar of data manipulation}
   \begin{itemize}
@@ -116,8 +120,9 @@
 
   \end{itemize}
 \end{frame} 
+%}}}
 
-\subsection{Data Import}
+\subsection{Data Import}%{{{
 
 \begin{frame}[fragile]
   \frametitle{Data Import}
@@ -181,8 +186,8 @@
 \end{alltt}
 \begin{verbatim}
 ##    test replications elapsed relative
-## 1  base          100   87.99    3.878
-## 2 dplyr          100   22.69    1.000
+## 1  base          100   92.98    3.968
+## 2 dplyr          100   23.43    1.000
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -269,7 +274,775 @@
 \end{kframe}
 \end{knitrout}
 \end{frame} 
+%}}}
 
+\subsection{{\tt dplyr} verbs}%{{{
+\begin{frame}[fragile]
+  \frametitle{The verbs}
+  \begin{itemize}
+    \item ``Variable and function names should be lowercase. Use an underscore
+      (\_) to separate words within a name. Generally, variable names should be
+      nouns and function names should be verbs. Strive for names that are
+      concise and meaningful (this is not easy!).'' - Hadley Wickham,
+      \url{http://adv-r.had.co.nz/Style.html}
+
+    \item Verbs in {\tt dplyr} 
+      \begin{itemize}
+        \item {\tt select},
+        \item {\tt arrange},
+        \item {\tt filter},
+        \item {\tt mutate}, 
+        \item {\tt summarize}.
+      \end{itemize}
+  \end{itemize}
+\end{frame} 
+%}}}
+
+\subsubsection{select}%{{{
+
+\begin{frame}[fragile]
+  \frametitle{{\tt select}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# Select columns of a data.frame, tbl_df.}
+\hlstd{wls_yr} \hlkwb{<-} \hlkwd{select}\hlstd{(wls_tbl_df, INCIDENT_YEAR, AIRPORT,}
+                 \hlstd{ENG_1_POS, ENG_2_POS, DAM_ENG1, DAM_ENG2,}
+                 \hlstd{HEIGHT, DISTANCE, SPEED)}
+\hlkwd{print}\hlstd{(wls_yr,} \hlkwc{n} \hlstd{=} \hlnum{5}\hlstd{)}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [142,911 x 9]
+## 
+##    INCIDENT_YEAR                     AIRPORT ENG_1_POS
+## 1           1992 DALLAS/FORT WORTH INTL ARPT         5
+## 2           1996             SACRAMENTO INTL         1
+## 3           1996         DENVER INTL AIRPORT         1
+## 4           1996             EPPLEY AIRFIELD         1
+## 5           1996 WASHINGTON DULLES INTL ARPT         1
+## ..           ...                         ...       ...
+## Variables not shown: ENG_2_POS (int), DAM_ENG1 (lgl),
+##   DAM_ENG2 (lgl), HEIGHT (int), DISTANCE (dbl), SPEED (int)
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt select}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# relative speed }
+\hlstd{bnch} \hlkwb{<-}
+  \hlkwd{benchmark}\hlstd{(}\hlkwc{base}  \hlstd{= wls_tbl_df[,} \hlkwd{c}\hlstd{(}\hlstr{"INCIDENT_YEAR"}\hlstd{,} \hlstr{"AIRPORT"}\hlstd{,}
+                                   \hlstr{"ENG_1_POS"}\hlstd{,} \hlstr{"ENG_2_POS"}\hlstd{,}
+                                   \hlstr{"DAM_ENG1"}\hlstd{,} \hlstr{"DAM_ENG2"}\hlstd{,}
+                                   \hlstr{"HEIGHT"}\hlstd{,} \hlstr{"DISTANCE"}\hlstd{,} \hlstr{"SPEED"}\hlstd{)],}
+            \hlkwc{dplyr} \hlstd{=} \hlkwd{select}\hlstd{(wls_tbl_df,}
+                           \hlstd{INCIDENT_YEAR, AIRPORT,}
+                           \hlstd{ENG_1_POS, ENG_2_POS,}
+                           \hlstd{DAM_ENG1, DAM_ENG2,}
+                           \hlstd{HEIGHT, DISTANCE, SPEED),}
+            \hlkwc{replications} \hlstd{=} \hlnum{100}\hlstd{)}
+\hlkwd{select}\hlstd{(bnch, test, replications, elapsed, relative)}
+\end{alltt}
+\begin{verbatim}
+##    test replications elapsed relative
+## 1  base          100   0.007    1.000
+## 2 dplyr          100   0.032    4.571
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
+Selection of columns might be slower, but, there are some
+tools to help speed up the coding, and maintenance.
+\end{frame} 
+
+
+\begin{frame}[fragile]
+  \frametitle{{\tt select}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# ‘num_range("x", 1:5, width = 2)’: selects all variables}
+\hlcom{# (numerically) from x01 to x05.}
+\hlkwd{select}\hlstd{(wls_tbl_df,} \hlkwd{num_range}\hlstd{(}\hlstr{"DAM_ENG"}\hlstd{,} \hlnum{1}\hlopt{:}\hlnum{4}\hlstd{))}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [142,911 x 4]
+## 
+##    DAM_ENG1 DAM_ENG2 DAM_ENG3 DAM_ENG4
+## 1     FALSE    FALSE    FALSE    FALSE
+## 2     FALSE    FALSE    FALSE    FALSE
+## 3     FALSE    FALSE    FALSE    FALSE
+## 4     FALSE    FALSE    FALSE    FALSE
+## 5     FALSE    FALSE    FALSE    FALSE
+## 6     FALSE    FALSE    FALSE    FALSE
+## 7     FALSE    FALSE    FALSE    FALSE
+## 8     FALSE    FALSE    FALSE    FALSE
+## 9     FALSE    FALSE    FALSE    FALSE
+## 10    FALSE    FALSE    FALSE    FALSE
+## ..      ...      ...      ...      ...
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt select}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# ‘starts_with(x, ignore.case = FALSE)’: names starts with ‘x’}
+\hlkwd{select}\hlstd{(wls_tbl_df,} \hlkwd{starts_with}\hlstd{(}\hlstr{"DAM"}\hlstd{))}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [142,911 x 15]
+## 
+##    DAMAGE DAM_RAD DAM_WINDSHLD DAM_NOSE DAM_ENG1 DAM_ENG2
+## 1       N   FALSE        FALSE    FALSE    FALSE    FALSE
+## 2           FALSE        FALSE    FALSE    FALSE    FALSE
+## 3           FALSE        FALSE    FALSE    FALSE    FALSE
+## 4       N   FALSE        FALSE    FALSE    FALSE    FALSE
+## 5       N   FALSE        FALSE    FALSE    FALSE    FALSE
+## 6       M   FALSE        FALSE    FALSE    FALSE    FALSE
+## 7       N   FALSE        FALSE    FALSE    FALSE    FALSE
+## 8      M?   FALSE        FALSE    FALSE    FALSE    FALSE
+## 9       N   FALSE        FALSE    FALSE    FALSE    FALSE
+## 10          FALSE        FALSE    FALSE    FALSE    FALSE
+## ..    ...     ...          ...      ...      ...      ...
+## Variables not shown: DAM_ENG3 (lgl), DAM_ENG4 (lgl), DAM_PROP
+##   (lgl), DAM_WING_ROT (lgl), DAM_FUSE (lgl), DAM_LG (lgl),
+##   DAM_TAIL (lgl), DAM_LGHTS (lgl), DAM_OTHER (lgl)
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt select}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# ‘ends_with(x, ignore.case = FALSE)’: names ends in ‘x’}
+\hlkwd{select}\hlstd{(wls_tbl_df,} \hlkwd{ends_with}\hlstd{(}\hlstr{"4"}\hlstd{))}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [142,911 x 2]
+## 
+##    STR_ENG4 DAM_ENG4
+## 1     FALSE    FALSE
+## 2     FALSE    FALSE
+## 3     FALSE    FALSE
+## 4     FALSE    FALSE
+## 5     FALSE    FALSE
+## 6     FALSE    FALSE
+## 7     FALSE    FALSE
+## 8     FALSE    FALSE
+## 9     FALSE    FALSE
+## 10    FALSE    FALSE
+## ..      ...      ...
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt select}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# ‘matches(x, ignore.case = FALSE)’: selects all variables}
+\hlcom{# whose name matches the regular expression ‘x’}
+\hlkwd{select}\hlstd{(wls_tbl_df,} \hlkwd{matches}\hlstd{(}\hlstr{"ENG|DAM"}\hlstd{))}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [142,911 x 26]
+## 
+##    NUM_ENGS TYPE_ENG ENG_1_POS ENG_2_POS ENG_3_POS ENG_4_POS
+## 1         3        D         5         6         5        NA
+## 2         2        D         1         1                  NA
+## 3         2        D         1         1                  NA
+## 4         2        D         1         1                  NA
+## 5         2        D         1         1                  NA
+## 6         2        D         1         1                  NA
+## 7         3        D         5         6         5        NA
+## 8         2        C         4         4                  NA
+## 9         2        D         1         1                  NA
+## 10        2        D         5         5                  NA
+## ..      ...      ...       ...       ...       ...       ...
+## Variables not shown: DAMAGE (chr), DAM_RAD (lgl),
+##   DAM_WINDSHLD (lgl), DAM_NOSE (lgl), STR_ENG1 (lgl),
+##   DAM_ENG1 (lgl), STR_ENG2 (lgl), DAM_ENG2 (lgl), STR_ENG3
+##   (lgl), DAM_ENG3 (lgl), STR_ENG4 (lgl), DAM_ENG4 (lgl),
+##   DAM_PROP (lgl), DAM_WING_ROT (lgl), DAM_FUSE (lgl), DAM_LG
+##   (lgl), DAM_TAIL (lgl), DAM_LGHTS (lgl), DAM_OTHER (lgl),
+##   INDICATED_DAMAGE (lgl)
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt select}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# ‘contains(x, ignore.case = FALSE)’: selects all}
+\hlcom{# variables whose name  contains ‘x’}
+\hlkwd{select}\hlstd{(wls_tbl_df,} \hlkwd{contains}\hlstd{(}\hlstr{"ENG"}\hlstd{))}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [142,911 x 14]
+## 
+##    NUM_ENGS TYPE_ENG ENG_1_POS ENG_2_POS ENG_3_POS ENG_4_POS
+## 1         3        D         5         6         5        NA
+## 2         2        D         1         1                  NA
+## 3         2        D         1         1                  NA
+## 4         2        D         1         1                  NA
+## 5         2        D         1         1                  NA
+## 6         2        D         1         1                  NA
+## 7         3        D         5         6         5        NA
+## 8         2        C         4         4                  NA
+## 9         2        D         1         1                  NA
+## 10        2        D         5         5                  NA
+## ..      ...      ...       ...       ...       ...       ...
+## Variables not shown: STR_ENG1 (lgl), DAM_ENG1 (lgl), STR_ENG2
+##   (lgl), DAM_ENG2 (lgl), STR_ENG3 (lgl), DAM_ENG3 (lgl),
+##   STR_ENG4 (lgl), DAM_ENG4 (lgl)
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt select}}
+  What about dropping variables?
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{print}\hlstd{(wls_yr,} \hlkwc{n} \hlstd{=} \hlnum{2}\hlstd{)}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [142,911 x 9]
+## 
+##    INCIDENT_YEAR                     AIRPORT ENG_1_POS
+## 1           1992 DALLAS/FORT WORTH INTL ARPT         5
+## 2           1996             SACRAMENTO INTL         1
+## ..           ...                         ...       ...
+## Variables not shown: ENG_2_POS (int), DAM_ENG1 (lgl),
+##   DAM_ENG2 (lgl), HEIGHT (int), DISTANCE (dbl), SPEED (int)
+\end{verbatim}
+\begin{alltt}
+\hlkwd{print}\hlstd{(}\hlkwd{select}\hlstd{(wls_yr,} \hlopt{-}\hlstd{AIRPORT,} \hlopt{-}\hlkwd{starts_with}\hlstd{(}\hlstr{"ENG"}\hlstd{)),} \hlkwc{n} \hlstd{=} \hlnum{3}\hlstd{)}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [142,911 x 6]
+## 
+##    INCIDENT_YEAR DAM_ENG1 DAM_ENG2 HEIGHT DISTANCE SPEED
+## 1           1992    FALSE    FALSE    300       NA   142
+## 2           1996    FALSE    FALSE      0        0    NA
+## 3           1996    FALSE    FALSE      0        0    NA
+## ..           ...      ...      ...    ...      ...   ...
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+%}}}
+
+\subsubsection{arrange}%{{{
+
+\begin{frame}[fragile]
+  \frametitle{{\tt arrange}}
+arrange: reorder the rows. Multiple inputs are ordered from left-to-right.
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{dat} \hlkwb{<-} \hlkwd{data.frame}\hlstd{(}\hlkwc{var1} \hlstd{=} \hlkwd{c}\hlstd{(}\hlnum{3}\hlstd{,} \hlnum{8}\hlstd{,} \hlnum{2}\hlstd{,} \hlnum{1}\hlstd{),}
+                  \hlkwc{var2} \hlstd{=} \hlkwd{c}\hlstd{(}\hlstr{"E"}\hlstd{,} \hlstr{"A"}\hlstd{,} \hlstr{"A"}\hlstd{,} \hlstr{"B"}\hlstd{))}
+\hlstd{dat}
+\end{alltt}
+\begin{verbatim}
+##   var1 var2
+## 1    3    E
+## 2    8    A
+## 3    2    A
+## 4    1    B
+\end{verbatim}
+\begin{alltt}
+\hlcom{# this would be very helpful for collecting data by a}
+\hlcom{# subject id, visit number, ...}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt arrange}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{arrange}\hlstd{(dat, var2)}
+\end{alltt}
+\begin{verbatim}
+##   var1 var2
+## 1    8    A
+## 2    2    A
+## 3    1    B
+## 4    3    E
+\end{verbatim}
+\begin{alltt}
+\hlkwd{arrange}\hlstd{(dat, var2, var1)}
+\end{alltt}
+\begin{verbatim}
+##   var1 var2
+## 1    2    A
+## 2    8    A
+## 3    1    B
+## 4    3    E
+\end{verbatim}
+\begin{alltt}
+\hlcom{# this would be very helpful for collecting data by a}
+\hlcom{# subject id, visit number, ...}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+%}}}
+
+\subsubsection{filter}%{{{
+\begin{frame}[fragile]
+  \frametitle{{\tt filter}}
+filter: return only a subset of the rows. If multiple
+conditions are supplied they are combined with ‘\&’.
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{dim}\hlstd{(wls_yr)}
+\end{alltt}
+\begin{verbatim}
+## [1] 142911      9
+\end{verbatim}
+\begin{alltt}
+\hlkwd{filter}\hlstd{(wls_yr, INCIDENT_YEAR} \hlopt{>} \hlnum{2000}\hlstd{, INCIDENT_YEAR} \hlopt{<=} \hlnum{2005}\hlstd{)}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [31,947 x 9]
+## 
+##    INCIDENT_YEAR                       AIRPORT ENG_1_POS
+## 1           2001           JOHN F KENNEDY INTL          
+## 2           2001       SAN FRANCISCO INTL ARPT         1
+## 3           2001                  ORLANDO INTL         1
+## 4           2001                  MOLOKAI ARPT         4
+## 5           2001         LAMBERT-ST LOUIS INTL         5
+## 6           2001              KANSAS CITY INTL         1
+## 7           2001                       UNKNOWN         1
+## 8           2001         AKRON-CANTON REGIONAL         7
+## 9           2001 DESTIN-FORT WALTON BEACH ARPT         5
+## 10          2001           JOHN F KENNEDY INTL         1
+## ..           ...                           ...       ...
+## Variables not shown: ENG_2_POS (int), DAM_ENG1 (lgl),
+##   DAM_ENG2 (lgl), HEIGHT (int), DISTANCE (dbl), SPEED (int)
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt filter}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{bnch} \hlkwb{<-}
+  \hlkwd{benchmark}\hlstd{(}\hlkwc{base} \hlstd{=} \hlkwd{subset}\hlstd{(wls_yr, INCIDENT_YEAR} \hlopt{>} \hlnum{2000} \hlopt{&} \hlstd{INCIDENT_YEAR} \hlopt{<=} \hlnum{2005}\hlstd{),}
+            \hlkwc{dplyr} \hlstd{=} \hlkwd{filter}\hlstd{(wls_yr, INCIDENT_YEAR} \hlopt{>} \hlnum{2000}\hlstd{, INCIDENT_YEAR} \hlopt{<=} \hlnum{2005}\hlstd{),}
+            \hlkwc{replications} \hlstd{=} \hlnum{100}\hlstd{)}
+\hlkwd{select}\hlstd{(bnch, test, replications, elapsed, relative)}
+\end{alltt}
+\begin{verbatim}
+##    test replications elapsed relative
+## 1  base          100   8.038    5.402
+## 2 dplyr          100   1.488    1.000
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+%}}}
+
+\subsubsection{mutate}%{{{
+\begin{frame}[fragile]
+  \frametitle{{\tt mutate}}
+mutate: add new columns. Multiple inputs create multiple columns.
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{eng.lbls} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlstr{"mounted below the wing"}\hlstd{,} \hlstr{"mounted above the wing"}\hlstd{,}
+              \hlstr{"part of the wing root"}\hlstd{,} \hlstr{"nacelle-mounted on the wing"}\hlstd{,}
+              \hlstr{"mounted on the aft fuselage"}\hlstd{)}
+\hlkwd{str}\hlstd{(}\hlkwd{mutate}\hlstd{(wls_yr,}
+       \hlkwc{SPEED_MPH} \hlstd{= SPEED} \hlopt{*} \hlnum{1.15078}\hlstd{,} \hlcom{# SPEED was in knots}
+       \hlkwc{ENG_1_POS} \hlstd{=} \hlkwd{factor}\hlstd{(ENG_1_POS,} \hlnum{19}\hlopt{:}\hlnum{23}\hlstd{, eng.lbls),}
+       \hlkwc{ENG_2_POS} \hlstd{=} \hlkwd{factor}\hlstd{(ENG_2_POS,} \hlnum{19}\hlopt{:}\hlnum{23}\hlstd{, eng.lbls)))}
+\end{alltt}
+\begin{verbatim}
+## Classes 'tbl_df', 'tbl' and 'data.frame':	142911 obs. of  10 variables:
+##  $ INCIDENT_YEAR: int  1992 1996 1996 1996 1996 1996 1991 1993 1995 1990 ...
+##  $ AIRPORT      : chr  "DALLAS/FORT WORTH INTL ARPT" "SACRAMENTO INTL" "DENVER INTL AIRPORT" "EPPLEY AIRFIELD" ...
+##  $ ENG_1_POS    : Factor w/ 5 levels "mounted below the wing",..: NA NA NA NA NA NA NA NA NA NA ...
+##  $ ENG_2_POS    : Factor w/ 5 levels "mounted below the wing",..: NA NA NA NA NA NA NA NA NA NA ...
+##  $ DAM_ENG1     : logi  FALSE FALSE FALSE FALSE FALSE FALSE ...
+##  $ DAM_ENG2     : logi  FALSE FALSE FALSE FALSE FALSE FALSE ...
+##  $ HEIGHT       : int  300 0 0 0 1000 5000 0 1500 0 100 ...
+##  $ DISTANCE     : num  NA 0 0 0 NA NA 0 NA 0 NA ...
+##  $ SPEED        : int  142 NA NA NA NA NA 100 220 NA 135 ...
+##  $ SPEED_MPH    : num  163 NA NA NA NA ...
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt mutate}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{bnch} \hlkwb{<-}
+\hlkwd{benchmark}\hlstd{(}\hlkwc{base} \hlstd{=} \hlkwd{within}\hlstd{(wls_yr, \{}
+                        \hlstd{SPEED_MPH} \hlkwb{=} \hlstd{SPEED} \hlopt{*} \hlnum{1.15078}
+                        \hlstd{ENG_1_POS} \hlkwb{=} \hlkwd{factor}\hlstd{(ENG_1_POS,} \hlnum{19}\hlopt{:}\hlnum{23}\hlstd{, eng.lbls)}
+                        \hlstd{ENG_2_POS} \hlkwb{=} \hlkwd{factor}\hlstd{(ENG_2_POS,} \hlnum{19}\hlopt{:}\hlnum{23}\hlstd{, eng.lbls)\}),}
+          \hlkwc{dplyr} \hlstd{=} \hlkwd{mutate}\hlstd{(wls_yr,}
+                         \hlkwc{SPEED_MPH} \hlstd{= SPEED} \hlopt{*} \hlnum{1.15078}\hlstd{,}
+                         \hlkwc{ENG_1_POS} \hlstd{=} \hlkwd{factor}\hlstd{(ENG_1_POS,} \hlnum{19}\hlopt{:}\hlnum{23}\hlstd{, eng.lbls),}
+                         \hlkwc{ENG_2_POS} \hlstd{=} \hlkwd{factor}\hlstd{(ENG_2_POS,} \hlnum{19}\hlopt{:}\hlnum{23}\hlstd{, eng.lbls)),}
+          \hlkwc{replications} \hlstd{=} \hlnum{100}\hlstd{)}
+\hlkwd{select}\hlstd{(bnch, test, replications, elapsed, relative)}
+\end{alltt}
+\begin{verbatim}
+##    test replications elapsed relative
+## 1  base          100   5.824    1.067
+## 2 dplyr          100   5.458    1.000
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+%}}}
+
+\subsubsection{summarize}%{{{
+\begin{frame}[fragile]
+  \frametitle{{\tt summarize}}
+summarise: reduce each group to a single row. Multiple
+inputs create multiple output summaries.  (Two spellings:
+{\tt summarize} and {\tt summarise}.)
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{summarise}\hlstd{(wls_yr,}
+          \hlstr{"Mean speed"} \hlstd{=} \hlkwd{mean}\hlstd{(SPEED,} \hlkwc{na.rm} \hlstd{=} \hlnum{TRUE}\hlstd{),}
+          \hlstr{"SD speed"}   \hlstd{=} \hlkwd{sd}\hlstd{(SPEED,} \hlkwc{na.rm} \hlstd{=} \hlnum{TRUE}\hlstd{),}
+          \hlkwc{n}            \hlstd{=} \hlkwd{sum}\hlstd{(}\hlopt{!}\hlkwd{is.na}\hlstd{(SPEED)))}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [1 x 3]
+## 
+##   Mean speed SD speed     n
+## 1      141.3    46.09 58938
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+%}}}
+
+\subsubsection{group\_by}%{{{
+\begin{frame}[fragile]
+  \frametitle{{\tt group\_by}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{summarise}\hlstd{(}\hlkwd{group_by}\hlstd{(wls_yr, ENG_1_POS),}
+          \hlstr{"Mean speed"} \hlstd{=} \hlkwd{mean}\hlstd{(SPEED,} \hlkwc{na.rm} \hlstd{=} \hlnum{TRUE}\hlstd{),}
+          \hlstr{"SD speed"}   \hlstd{=} \hlkwd{sd}\hlstd{(SPEED,} \hlkwc{na.rm} \hlstd{=} \hlnum{TRUE}\hlstd{),}
+          \hlkwc{n}            \hlstd{=} \hlkwd{sum}\hlstd{(}\hlopt{!}\hlkwd{is.na}\hlstd{(SPEED)))}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [11 x 4]
+## 
+##    ENG_1_POS Mean speed SD speed     n
+## 1                113.20    40.40  1303
+## 2          1     154.81    43.14 27634
+## 3          2      62.00    43.39     4
+## 4          3     108.32    33.48    31
+## 5          4     123.90    41.74  7953
+## 6          5     143.80    42.31 17701
+## 7          6      99.06    36.67   482
+## 8          7      83.91    29.34  3829
+## 9          A      90.00       NA     1
+## 10         C        NaN       NA     0
+## 11         T        NaN       NA     0
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt group\_by}}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{bnch} \hlkwb{<-}
+  \hlkwd{benchmark}\hlstd{(}\hlkwc{base} \hlstd{=} \hlkwd{aggregate}\hlstd{(SPEED} \hlopt{~} \hlstd{ENG_1_POS, wls_yr,}
+                             \hlkwa{function}\hlstd{(}\hlkwc{x}\hlstd{)} \hlkwd{c}\hlstd{(}\hlkwc{mean} \hlstd{=} \hlkwd{mean}\hlstd{(x,} \hlkwc{na.rm} \hlstd{=} \hlnum{TRUE}\hlstd{),}
+                                           \hlkwc{sd}   \hlstd{=} \hlkwd{sd}\hlstd{(x,} \hlkwc{na.rm} \hlstd{= T),}
+                                           \hlkwc{n}    \hlstd{=} \hlkwd{sum}\hlstd{(}\hlopt{!}\hlkwd{is.na}\hlstd{(x)))),}
+            \hlkwc{dplyr} \hlstd{=} \hlkwd{summarise}\hlstd{(}\hlkwd{group_by}\hlstd{(wls_yr, ENG_1_POS),}
+                              \hlstr{"Mean speed"} \hlstd{=} \hlkwd{mean}\hlstd{(SPEED,} \hlkwc{na.rm} \hlstd{=} \hlnum{TRUE}\hlstd{),}
+                              \hlstr{"SD speed"}   \hlstd{=} \hlkwd{sd}\hlstd{(SPEED,} \hlkwc{na.rm} \hlstd{=} \hlnum{TRUE}\hlstd{),}
+                              \hlkwc{n}            \hlstd{=} \hlkwd{sum}\hlstd{(}\hlopt{!}\hlkwd{is.na}\hlstd{(SPEED))),}
+            \hlkwc{replications} \hlstd{=} \hlnum{100}\hlstd{)}
+\hlkwd{select}\hlstd{(bnch, test, replications, elapsed, relative)}
+\end{alltt}
+\begin{verbatim}
+##    test replications elapsed relative
+## 1  base          100  79.457    49.72
+## 2 dplyr          100   1.598     1.00
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+%}}}
+
+\subsection{Chaining Work together}%{{{
+\begin{frame}[fragile]
+  \frametitle{Say we need to filter, group\_by, and
+  summarise data}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# What is the mean distance from the airport, in kilometers,}
+\hlcom{# where the strike took place, by damage to engine, on twin}
+\hlcom{# engine aircraft, between 2002 and 2010, inclusive?}
+\hlkwd{summarize}\hlstd{(}\hlkwd{group_by}\hlstd{(}\hlkwd{mutate}\hlstd{(}\hlkwd{filter}\hlstd{(wls, INCIDENT_YEAR} \hlopt{>=} \hlnum{2002}\hlstd{, INCIDENT_YEAR} \hlopt{<=}
+    \hlnum{2010}\hlstd{, NUM_ENGS} \hlopt{==} \hlnum{2}\hlstd{),} \hlkwc{DISTANCE_KM} \hlstd{= DISTANCE} \hlopt{*} \hlnum{1.60934}\hlstd{), DAM_ENG1,}
+    \hlstd{DAM_ENG2),} \hlkwc{`mean distance in KM`} \hlstd{=} \hlkwd{mean}\hlstd{(DISTANCE_KM,} \hlkwc{na.rm} \hlstd{=} \hlnum{TRUE}\hlstd{))}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [4 x 3]
+## Groups: DAM_ENG1
+## 
+##   DAM_ENG1 DAM_ENG2 mean distance in KM
+## 1    FALSE    FALSE              1.3715
+## 2    FALSE     TRUE              1.3228
+## 3     TRUE    FALSE              0.8347
+## 4     TRUE     TRUE              0.6584
+\end{verbatim}
+\begin{alltt}
+\hlcom{# Without a comment to explain, how long would it take to}
+\hlcom{# explain the above code?  You need to read from the inside}
+\hlcom{# out.  THERE IS A BETTER WAY}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{Chain together multiple operations.}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{wls} \hlopt{%>%}
+\hlkwd{filter}\hlstd{(INCIDENT_YEAR} \hlopt{>=} \hlnum{2002}\hlstd{,}
+       \hlstd{INCIDENT_YEAR} \hlopt{<=} \hlnum{2010}\hlstd{,}
+       \hlstd{NUM_ENGS}      \hlopt{==} \hlnum{2}\hlstd{)} \hlopt{%>%}
+\hlkwd{mutate}\hlstd{(}\hlkwc{DISTANCE_KM} \hlstd{= DISTANCE} \hlopt{*} \hlnum{1.60934}\hlstd{)} \hlopt{%>%}
+\hlkwd{group_by}\hlstd{(DAM_ENG1, DAM_ENG2)} \hlopt{%>%}
+\hlkwd{summarise}\hlstd{(}\hlstr{"mean distance in KM"} \hlstd{=} \hlkwd{mean}\hlstd{(DISTANCE_KM,} \hlkwc{na.rm} \hlstd{=} \hlnum{TRUE}\hlstd{))}
+\end{alltt}
+\begin{verbatim}
+## Source: local data frame [4 x 3]
+## Groups: DAM_ENG1
+## 
+##   DAM_ENG1 DAM_ENG2 mean distance in KM
+## 1    FALSE    FALSE              1.3715
+## 2    FALSE     TRUE              1.3228
+## 3     TRUE    FALSE              0.8347
+## 4     TRUE     TRUE              0.6584
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+More detailed examples of the forward-piping operator
+follow.
+\end{frame} 
+%}}}
+
+\subsection{Joins}%{{{
+\begin{frame}[fragile]
+  \frametitle{joining data sets}
+  \begin{itemize}
+    \item {\tt dplyr} version 0.2 has the following joins:
+      \begin{itemize}
+        \item {\tt inner\_join}, 
+        \item {\tt left\_join}, 
+        \item {\tt semi\_join}, and
+        \item {\tt anti\_join}.
+      \end{itemize}
+    \item Stated milestone for version 0.3 includes
+      \begin{itemize}
+        \item {\tt outer\_join}, 
+        \item {\tt right\_join}, and
+        \item {\tt cross\_join}.
+      \end{itemize}
+      %      ‘inner_join’ return all rows from x where there are matching values in y,
+      %           and all columns from x and y. If there are multiple matches between
+      %           x and y, all combination of the matches are returned.
+      % 
+      %      ‘left_join’ return all rows from x, and all columns from x and y. If
+      %           there are multiple matches between x and y, all combination of the
+      %           matches are returned.
+      % 
+      %      ‘semi_join’ return all rows from x where there are matching values in y,
+      %           keeping just columns from x.
+      % 
+      %           A semi join differs from an inner join because an inner join will
+      %           return one row of ‘x’ for each matching row of ‘y’, where a semi
+      %           join will never duplicate rows of ‘x’.
+      % 
+      %      ‘anti_join’ return all rows from x where there are not matching values in
+      %           y, keeping just columns from x
+  \end{itemize}
+\end{frame} 
+%}}}
+
+\subsection{Memory Usage}%{{{
+\begin{frame}[fragile]
+  \frametitle{Improved memory usage} 
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{this_df2} \hlkwb{<-} \hlstd{this_df} \hlkwb{<-} \hlkwd{data.frame}\hlstd{(}\hlkwc{var1} \hlstd{=} \hlnum{1}\hlopt{:}\hlnum{5}\hlstd{,} \hlkwc{var2} \hlstd{=} \hlkwd{rnorm}\hlstd{(}\hlnum{5}\hlstd{))}
+\hlkwd{changes}\hlstd{(this_df, this_df2)}
+\end{alltt}
+\begin{verbatim}
+## <identical>
+\end{verbatim}
+\begin{alltt}
+\hlstd{this_df}\hlopt{$}\hlstd{var1} \hlkwb{<-} \hlkwd{rexp}\hlstd{(}\hlnum{5}\hlstd{,} \hlkwc{rate} \hlstd{=} \hlnum{2}\hlstd{)}
+\hlkwd{changes}\hlstd{(this_df, this_df2)}
+\end{alltt}
+\begin{verbatim}
+## Changed variables:
+##           old        new      
+## var1      0x157ae870 0x62dca90
+## 
+## Changed attributes:
+##           old        new       
+## row.names 0x1640b390 0x157bd6b0
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{Improved memory usage}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{this_df2} \hlkwb{<-} \hlstd{this_df} \hlkwb{<-} \hlkwd{data.frame}\hlstd{(}\hlkwc{var1} \hlstd{=} \hlnum{1}\hlopt{:}\hlnum{5}\hlstd{,} \hlkwc{var2} \hlstd{=} \hlkwd{rnorm}\hlstd{(}\hlnum{5}\hlstd{))} \hlopt{%>%} \hlkwd{tbl_df}\hlstd{()}
+\hlkwd{changes}\hlstd{(this_df, this_df2)}
+\end{alltt}
+\begin{verbatim}
+## <identical>
+\end{verbatim}
+\begin{alltt}
+\hlstd{this_df} \hlkwb{<-} \hlstd{this_df} \hlopt{%>%} \hlkwd{mutate}\hlstd{(}\hlkwc{var1} \hlstd{=} \hlkwd{rexp}\hlstd{(}\hlnum{5}\hlstd{))}
+\hlkwd{changes}\hlstd{(this_df, this_df2)}
+\end{alltt}
+\begin{verbatim}
+## Changed variables:
+##           old        new      
+## var1      0x1936de38 0xd580f48
+## 
+## Changed attributes:
+##           old        new      
+## names     0x87e4618  0xc1e0958
+## class     0x18ed2ad0 0xd580980
+## row.names 0x4958c40  0x4958fa0
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt dplyr} memory usage}
+  From the {\tt vignette("memory", "dplyr")}
+  \begin{itemize}
+    \item {\tt tbl\_df()} and {\tt group\_by()} don't copy columns
+    \item {\tt select()} never copies columns, even when you rename them
+    \item {\tt mutate()} never copies columns, except when you modify an existing column
+    \item {\tt arrange()} must copy because you're changing
+      the order of every column. This is an expensive
+      operation for big data, but you can generally avoid it
+      using the order argument to window functions
+    \item {\tt summarise()} creates new data, but it's
+      usually at least an order of magnitude smaller than
+      the original data.
+  \end{itemize}
+\end{frame} 
+%}}}
+
+\subsection{Window Functions}%{{{
+\begin{frame}[fragile]
+  \frametitle{Window Functions}
+\begin{knitrout}\footnotesize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# see vignette("window-functions", package = "dplyr")}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+\end{frame} 
+%}}}
+
+\subsection{Other data sources}%{{{
+\begin{frame}[fragile]
+  \frametitle{Other Data Sources}
+  \begin{itemize}
+    \item {\tt dplyr} works for 
+      \begin{itemize}
+        \item {\tt data.frame}s, \item {\tt data.table}s,
+          databases, and multidimensional arrays.
+        \item Same verbs used for all data sources.
+        \item See {\tt vignette("databases", package =
+          "dplyr")} for more details.
+
+      \end{itemize}
+  \end{itemize}
+\end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{{\tt data.table} vs {\tt dplyr}}
+  From the {\\ dplyr} introduction vignette:
+  \begin{itemize}
+    \item For multiple operations, data.table can be faster
+      because you usually use it with multiple verbs at the
+      same time. For example, with data table you can do a
+      mutate and a select in a single step, and it's smart
+      enough to know that there's no point in computing the
+      new variable for the rows you're about to throw away.
+    \item The advantages of using {\tt dplyr} with data
+      tables are:
+      \begin{itemize}
+        \item For common data manipulation tasks, it
+          insulates you from reference semantics of
+          data.tables, and protects you from accidentally
+          modifying your data.
+        \item Instead of one complex method built on the
+          subscripting operator ([), it provides many simple
+          methods.
+      \end{itemize} 
+  \end{itemize}
+\end{frame} 
+%}}}
 
 \section{magrittr}%{{{
 \begin{frame}[fragile]
@@ -277,22 +1050,22 @@
   \framesubtitle{ceci n'est pas un pipe (this is not a pipe)}
 
   \begin{itemize}
-    \item {\tt dplyr} funcationality is made more powerful via the \verb|%>%|,
+    \item {\tt dplyr} functionality is made more powerful via the \verb|%>%|,
       or equivalently, \verb|\%.%$|, operator.
 
-      %     \item<2-> Additional functionally provided by the {\tt magrittr} package
-      %       authored by Stefan Bache and Hadley Wickham.
-      % 
-      %     \item<3-> These operators are similar to 
-      %       \begin{itemize} 
-      %         \item F\#'s $|>$, or
-      %         \item Linux's $|$.
-      %       \end{itemize}
-      % 
-      %     \item<4-> Use of these operators will drastically change your {\tt R} syntax.
-      % 
-      %     \item<5-> Helpful to writting complex, nested, operations.
-      %     \item<5->``Read from left to right instead of inside out.''
+    \item Additional functionally provided by the {\tt magrittr} package
+      authored by Stefan Bache and Hadley Wickham.
+
+    \item These operators are similar to 
+      \begin{itemize} 
+        \item F\#'s $|>$, or
+        \item Linux's $|$.
+      \end{itemize}
+
+    \item Use of these operators will drastically change your {\tt R} syntax.
+
+    \item Helpful to writing complex, nested, operations.
+    \item``Read from left to right instead of inside out.''
 
   \end{itemize}
 \end{frame} 
@@ -330,6 +1103,7 @@ What's the point?
 \end{frame} 
 %}}}
 
+\section{Wrap Up}%{{{
 \begin{frame}[fragile]
   \frametitle{Reproducibility}
   The data, code, sides, etc.\ all at \url{github.com/dewittpe/dplyr-demo}
@@ -355,11 +1129,25 @@ What's the point?
 ## loaded via a namespace (and not attached):
 ##  [1] assertthat_0.1  codetools_0.2-8 digest_0.6.4   
 ##  [4] evaluate_0.5.5  formatR_0.10    highr_0.3      
-##  [7] parallel_3.1.0  Rcpp_0.11.1     stringr_0.6.2  
-## [10] tools_3.1.0
+##  [7] parallel_3.1.0  qwraps_0.2.2    Rcpp_0.11.1    
+## [10] stringr_0.6.2   tcltk_3.1.0     tools_3.1.0
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
 \end{frame} 
+
+\begin{frame}[fragile]
+  \frametitle{DRUG}
+  \begin{itemize}
+    \item Future MeeetUp Topics:
+      \begin{itemize}
+        \item (Possible) iPython / R speaker for later in July
+        \item We need others speakers!
+      \end{itemize}
+    \item MeetUp locations/times
+  \end{itemize}
+\end{frame} 
+%}}}
+
 \end{document}
 
